# Programowanie-Rownoleg-e-Rozproszone

Comivojager/: CMakeLists.txt  main.cpp
Dining-Philosopher/: CMakeLists.txt
Dining-Philosopher/include/: Fork.h  Philosopher.h
Dining-Philosopher/src/: Fork.c  Philosopher.c  main.c
Euler_Gamma/: CMakeLists.txt  main.c
Smokers/: CMakeLists.txt
Smokers/src/: main.c
Writers_and_Readers/: CMakeLists.txt
Writers_and_Readers/include/: Book.h  Person.h
Writers_and_Readers/src/: Book.c  Person.c  main.c
